tests/ui/errors/snapshots/infer_invalid_cast_rune_to_byte.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid cast
   ╭─[test.lis:4:3]
 3 │   let r: rune = 'A';
 4 │   r as byte
   ·   ────┬────
   ·       ╰── cannot cast `rune` to `byte`
 5 │ }
   ╰────
  help: rune (int32) is wider than byte (uint8) and may not fit. Use an intermediate variable to cast via int first: `let n = r as int; n as byte` · code: [infer.invalid_cast]
