tests/ui/errors/snapshots/infer_invalid_cast_string_to_rune.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid cast
   ╭─[test.lis:3:3]
 2 │ fn test() -> rune {
 3 │   "A" as rune
   ·   ─────┬─────
   ·        ╰── cannot cast `string` to `rune`
 4 │ }
   ╰────
  help: Strings cannot be cast to numbers and require explicit conversion. Use `strconv.Atoi()` to parse · code: [infer.invalid_cast]
