tests/ui/errors/snapshots/infer_invalid_cast_struct_to_int.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Invalid cast
   ╭─[test.lis:6:3]
 5 │   let s = MyStruct { x: 1 };
 6 │   s as int
   ·   ────┬───
   ·       ╰── cannot cast `MyStruct` to `int`
 7 │ }
   ╰────
  help: Casts are supported between: numeric types, byte/rune to string, string to byte/rune slices, byte to rune, and concrete types to interfaces · code: [infer.invalid_cast]
