tests/ui/errors/snapshots/infer_native_array_method_value.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use native method as a value
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let _ = Array.get
   ·           ────┬────
   ·               ╰── native methods must be called directly
 4 │ }
   ╰────
  help: Use a closure instead: `|args| receiver.get(args)` · code: [infer.native_method_value]
