tests/ui/errors/snapshots/infer_variadic_param_not_last.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Variadic parameter must be last
   ╭─[test.lis:2:15]
 1 │ 
 2 │ fn test(rest: VarArgs<int>, trailing: int) -> int {
   ·               ──────┬─────
   ·                     ╰── a `VarArgs<T>` must be the last function parameter
 3 │   trailing
   ╰────
  help: Move this `VarArgs<T>` parameter to the end of the parameter list · code: [infer.variadic_param_not_last]
