tests/ui/errors/snapshots/infer_variadic_param_not_last_method.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Variadic parameter must be last
   ╭─[test.lis:5:23]
 4 │ impl Foo {
 5 │   fn test(self, rest: VarArgs<int>, trailing: int) -> int {
   ·                       ──────┬─────
   ·                             ╰── a `VarArgs<T>` must be the last function parameter
 6 │     trailing
   ╰────
  help: Move this `VarArgs<T>` parameter to the end of the parameter list · code: [infer.variadic_param_not_last]
