tests/ui/errors/snapshots/infer_variadic_type_not_allowed_nested.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Variadic type not allowed here
   ╭─[test.lis:2:19]
 1 │ 
 2 │ fn test(xs: Slice<VarArgs<int>>) {
   ·                   ──────┬─────
   ·                         ╰── `VarArgs<T>` is only valid as a function's final parameter
 3 │   let _ = xs
   ╰────
  help: Use `Slice<T>` to hold a collection of values · code: [infer.variadic_type_not_allowed]
