tests/ui/errors/snapshots/infer_variadic_type_not_allowed_struct_field.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Variadic type not allowed here
   ╭─[test.lis:3:10]
 2 │ struct Foo {
 3 │   items: VarArgs<int>
   ·          ──────┬─────
   ·                ╰── `VarArgs<T>` is only valid as a function's final parameter
 4 │ }
   ╰────
  help: Use `Slice<T>` to hold a collection of values · code: [infer.variadic_type_not_allowed]
